Fix footnotes text alignment

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -432,7 +432,7 @@ sup {
     }
   }
 
-  .footnotes {
+  .footnotes li {
     text-align: left;
   }
 }
